scenarios/detection_evasion/vpc_endpoint_spoofing_resources/exploit.tf
resource "aws_vpc" "main" {
  cidr_block       = "${var.target_CIDR_block}"
  instance_tenancy = "default"
  enable_dns_support = true
  enable_dns_hostnames  = true 
  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_subnet" "main" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "${var.target_CIDR_block}"

  tags = {
    Name = "vpc_exploit"
  }
}

// data "aws_ami" "ubuntu" {
//   most_recent = true

//   filter {
//     name   = "name"
//     values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
//   }

//   filter {
//     name   = "virtualization-type"
//     values = ["hvm"]
//   }

//   owners = ["099720109477"] # Canonical
// }

// resource "aws_internet_gateway" "gw" {
//   vpc_id = "${aws_vpc.main.id}"

//   tags = {
//     Name = "vpc_exploit"
//   }
// }

// resource "aws_route" "r" {
//   route_table_id            = "${aws_vpc.main.main_route_table_id}"
//   destination_cidr_block    = "0.0.0.0/0"
//   gateway_id = "${aws_internet_gateway.gw.id}"
// }

resource "aws_instance" "web" {
  ami           = "ami-033b95fb8079dc481"
  instance_type = "t2.micro"
  private_ip = "${var.target_IP}"
  associate_public_ip_address = true
  subnet_id = "${aws_subnet.main.id}"
  iam_instance_profile = "${aws_iam_instance_profile.ec2_instance_profile.name}"
  // Do I even need the below key since I'm using ssm?
  key_name = "delete-this-key-now" 
  vpc_security_group_ids = ["${aws_security_group.vpc_exploit.id}"]
  user_data = <<EOF
  #!/bin/bash
  cd /tmp
  sudo yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
  sudo systemctl enable amazon-ssm-agent
  sudo systemctl start amazon-ssm-agent
  EOF
  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_iam_instance_profile" "ec2_instance_profile" {
  name = "ec2_instance_profile"
  role = aws_iam_role.ec2_instance_profile_role.name
  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_iam_role" "ec2_instance_profile_role" {
  name = "ec2_instance_profile_role"
  path = "/"
  tags = {
    Name = "vpc_exploit"
  }
  assume_role_policy = <<EOF
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Action": "sts:AssumeRole",
            "Principal": {
               "Service": "ec2.amazonaws.com"
            },
            "Effect": "Allow",
            "Sid": ""
        }
    ]
}
EOF
}

resource "aws_iam_role_policy_attachment" "admin" {
  role       = aws_iam_role.ec2_instance_profile_role.name
  policy_arn = "arn:aws:iam::aws:policy/AdministratorAccess"
}

resource "aws_iam_role_policy_attachment" "ssm_policy_core" {
  role       = aws_iam_role.ec2_instance_profile_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}

resource "aws_iam_role_policy_attachment" "cloudwatch_agent_server_policy" {
  role       = aws_iam_role.ec2_instance_profile_role.name
  policy_arn = "arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy"
}

// resource "aws_iam_role_policy" "ssm_s3_policy" {
//   name = "ssm_s3_policy"
//   role = aws_iam_role.ec2_instance_profile_role.id

//   policy = jsonencode({
//     Version = "2012-10-17"
//     Statement = [
//       {
//         Action = [
//           "s3:*",
//         ]
//         Effect   = "Allow"
//         Resource = "*"
//       },
//     ]
//   })
// }

resource "aws_vpc_endpoint" "sts" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${var.region}.sts"
  vpc_endpoint_type = "Interface"
  private_dns_enabled = true
  subnet_ids = ["${aws_subnet.main.id}"]
  security_group_ids = [
    aws_security_group.vpc_exploit.id,
  ]

  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_vpc_endpoint" "ssm" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${var.region}.ssm"
  vpc_endpoint_type = "Interface"
  subnet_ids = ["${aws_subnet.main.id}"]
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.vpc_exploit.id,
  ]

  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_vpc_endpoint" "ec2messages" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${var.region}.ec2messages"
  vpc_endpoint_type = "Interface"
  subnet_ids = ["${aws_subnet.main.id}"]
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.vpc_exploit.id,
  ]

  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_vpc_endpoint" "ec2" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${var.region}.ec2"
  vpc_endpoint_type = "Interface"
  subnet_ids = ["${aws_subnet.main.id}"]
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.vpc_exploit.id,
  ]

  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_vpc_endpoint" "ssmmessages" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${var.region}.ssmmessages"
  vpc_endpoint_type = "Interface"
  subnet_ids = ["${aws_subnet.main.id}"]
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.vpc_exploit.id,
  ]

  tags = {
    Name = "vpc_exploit"
  }
}

resource "aws_vpc_endpoint" "logs" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${var.region}.logs"
  vpc_endpoint_type = "Interface"
  subnet_ids = ["${aws_subnet.main.id}"]
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.vpc_exploit.id,
  ]

  tags = {
    Name = "vpc_exploit"
  }
}

// resource "aws_vpc_endpoint" "s3" {
//   vpc_id       = aws_vpc.main.id
//   service_name = "com.amazonaws.${var.region}.s3"
//   vpc_endpoint_type = "Gateway"

//   tags = {
//     Name = "vpc_exploit"
//   }
// }

resource "aws_security_group" "vpc_exploit" {
  name        = "vpc_exploit"
  description = "Allow ssh inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "SSH"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vpc_exploit"
  }
}
